--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <!-- 
        Hero       
       -->
+    <div id="loader"></div>
+
     <div class="social">
       <a href="https://www.facebook.com/search/top?q=kacera">
         <i class="fab fa-facebook"></i>
@@ -125,6 +127,13 @@
             />
           </video>
         </figure>
+        <button class="btn primary catalogo">Catálogo</button>
+      </div>
+
+      <div class="header__button">
+        <button class="btn primary animate__fadeInDownBig">
+          <i class="fas fa-chevron-down"></i>
+        </button>
       </div>
     </header>
     <!-- End heero -->
@@ -276,11 +285,11 @@
       </div>
     </div>
     <!-- <div class="glide products_slider">
-    <div class="glide__track" data-glide-el="track">...</div>
-    <div class="list products glide__slides">
+  <div class="glide__track" data-glide-el="track">...</div>
+  <div class="list products glide__slides">
 
-    </div>
-  </div> -->
+  </div>
+</div> -->
     <div class="horizontal-section">
       <div class="sticky">
         <div class="hero-container sticky-container glide">
@@ -288,37 +297,37 @@
             <div class="list products glide__slides"></div>
           </div>
           <!-- <div class="list">
-          <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-              class="image-5">
-            <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-            <div class="text-block-3">10g Proteina <br>4g grasa</div>
-            <div><strong class="bold-text">S/20</strong></div>
-          </div>
-          <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-              class="image-5">
-            <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-            <div class="text-block-3">10g Proteina <br>4g grasa</div>
-            <div><strong class="bold-text">S/20</strong></div>
-          </div>
-          <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-              class="image-5">
-            <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-            <div class="text-block-3">10g Proteina <br>4g grasa</div>
-            <div><strong class="bold-text">S/20</strong></div>
-          </div>
-          <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-              class="image-5">
-            <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-            <div class="text-block-3">10g Proteina <br>4g grasa</div>
-            <div><strong class="bold-text">S/20</strong></div>
-          </div>
-          <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-              class="image-5">
-            <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-            <div class="text-block-3">10g Proteina <br>4g grasa</div>
-            <div><strong class="bold-text">S/20</strong></div>
-          </div>
-        </div> -->
+        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
+            class="image-5">
+          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
+          <div class="text-block-3">10g Proteina <br>4g grasa</div>
+          <div><strong class="bold-text">S/20</strong></div>
+        </div>
+        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
+            class="image-5">
+          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
+          <div class="text-block-3">10g Proteina <br>4g grasa</div>
+          <div><strong class="bold-text">S/20</strong></div>
+        </div>
+        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
+            class="image-5">
+          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
+          <div class="text-block-3">10g Proteina <br>4g grasa</div>
+          <div><strong class="bold-text">S/20</strong></div>
+        </div>
+        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
+            class="image-5">
+          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
+          <div class="text-block-3">10g Proteina <br>4g grasa</div>
+          <div><strong class="bold-text">S/20</strong></div>
+        </div>
+        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
+            class="image-5">
+          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
+          <div class="text-block-3">10g Proteina <br>4g grasa</div>
+          <div><strong class="bold-text">S/20</strong></div>
+        </div>
+      </div> -->
         </div>
       </div>
     </div>
@@ -409,6 +418,7 @@
         >
       </div>
     </div>
+
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=612fe3dabe44ebc51bdad9f6"
       type="text/javascript"
