chore: deploy version 1.0.1

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       </figure>
       <ul class="nav__menu">
         <li>
-          <a href="">Beneficios</a>
+          <a data-scroll href="#benefits">Beneficios</a>
         </li>
         <li>
-          <a href=""> Ofertas </a>
+          <a data-scroll href="#ofert"> Ofertas </a>
         </li>
         <li>
-          <a href=""> Ubicación </a>
+          <a data-scroll href="#ubication"> Ubicación </a>
         </li>
         <li>
           <a href="" class="btn primary"> Catálogo </a>
@@ -86,12 +86,14 @@
     <header class="header">
       <div class="header__content">
         <section class="content">
-          <h1>Alimentos con alto contenido Nutricional</h1>
+          <h1 class="animate__animated animate__fadeInLeft">
+            Alimentos con alto contenido Nutricional
+          </h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus quis
             duis ac
           </p>
-          <div class="content__input">
+          <div class="content__input animate__animated animate__fadeInUp">
             <p>Obtén un cupon de descuento</p>
             <input
               type="email"
@@ -131,7 +133,7 @@
       </div>
 
       <div class="header__button">
-        <button class="btn primary animate__fadeInDownBig">
+        <button class="btn primary animate__animated animate__fadeInDownBig">
           <i class="fas fa-chevron-down"></i>
         </button>
       </div>
@@ -165,7 +167,7 @@
         /></span>
       </h1>
     </div>
-    <div class="mapsection wf-section">
+    <div id="ubication" class="mapsection wf-section">
       <div
         data-widget-latlng="-12.0463731,-77.042754"
         data-widget-tooltip=""
@@ -198,7 +200,7 @@
         <span class="text-span-11">Kacera<br /><br /> </span>
       </h1>
     </div>
-    <div class="section-8 wf-section">
+    <div id="benefits" class="section-8 wf-section">
       <div class="w-layout-grid grid">
         <div class="benefitcard">
           <div
@@ -276,7 +278,7 @@
         class="lottie-animation-7"
       ></div>
       <div class="absolute-tittle">
-        <h1 class="heading-17">
+        <h1 id="ofert" class="heading-17">
           <span class="text-span-12">¿Platos clásicos o criollos?, </span>¿<span
             class="text-span-5"
             >Frutas, verduras o snacks?</span
@@ -290,45 +292,9 @@
 
   </div>
 </div> -->
-    <div class="horizontal-section">
-      <div class="sticky">
-        <div class="hero-container sticky-container glide">
-          <div class="glide__track" data-glide-el="track">
-            <div class="list products glide__slides"></div>
-          </div>
-          <!-- <div class="list">
-        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-            class="image-5">
-          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-          <div class="text-block-3">10g Proteina <br>4g grasa</div>
-          <div><strong class="bold-text">S/20</strong></div>
-        </div>
-        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-            class="image-5">
-          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-          <div class="text-block-3">10g Proteina <br>4g grasa</div>
-          <div><strong class="bold-text">S/20</strong></div>
-        </div>
-        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-            class="image-5">
-          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-          <div class="text-block-3">10g Proteina <br>4g grasa</div>
-          <div><strong class="bold-text">S/20</strong></div>
-        </div>
-        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-            class="image-5">
-          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-          <div class="text-block-3">10g Proteina <br>4g grasa</div>
-          <div><strong class="bold-text">S/20</strong></div>
-        </div>
-        <div class="food-card horizontal-item"><img src="images/ima_producto.png" loading="lazy" alt=""
-            class="image-5">
-          <h1 class="heading-7">Tiradito 7 colores de Corvina</h1>
-          <div class="text-block-3">10g Proteina <br>4g grasa</div>
-          <div><strong class="bold-text">S/20</strong></div>
-        </div>
-      </div> -->
-        </div>
+    <div class="products_galery glide">
+      <div class="glide__track" data-glide-el="track">
+        <div class="list products"></div>
       </div>
     </div>
     <div class="sponsorsection wf-section">
