chore: deploy version 1.0.1

--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
           <h1 class="animate__animated animate__fadeInLeft">
             Alimentos con alto contenido Nutricional
           </h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus quis
-            duis ac
-          </p>
+          <p>¡Te llega en minutos!</p>
           <div class="content__input animate__animated animate__fadeInUp">
             <p>Obtén un cupon de descuento</p>
             <input
@@ -129,7 +126,11 @@
             />
           </video>
         </figure>
-        <button class="btn primary catalogo">Catálogo</button>
+        <a
+          href="https://app.olaclick.com/es/kacera-tienda-de-superalimentos"
+          class="btn primary catalogo"
+          >Catálogo</a
+        >
       </div>
 
       <div class="header__button">
