chore: deploy version 1.0.1

--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
           <div class="content__input animate__animated animate__fadeInUp">
             <p>Obtén un cupon de descuento</p>
             <input
+              id="email_cupon"
               type="email"
               placeholder="example@example.com"
               class="control"
             />
-            <button class="btn primary">Enviar</button>
+            <button class="btn primary" id="sendCupon">Enviar</button>
           </div>
           <!-- Input -->
         </section>
