chore: deploy version 1.0.1

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       <div class="container-7 w-container">
         <div class="menus">
           <div class="div-block-7">
-            <h1 class="heading-12">Terminos y condiciones</h1>
+            <a href="./terms.html" class="heading-12">Terminos y condiciones</a>
             <h1 class="heading-12">Contactar al manager</h1>
             <h1 class="heading-12">Misión y Visión</h1>
           </div>
