--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
         alt=""
         class="image-15"
       />
-      <h1 class="heading-2">
-        <span class="text-span-16">¡Ya no pierdas tiempo!<br /></span
-        ><span class="text-span-7">No tienes que salir para encontrar</span>
+      <h1 class="heading-2" >
+        <span class="text-span-16">¡Ya no pierdas tiempo!<br /> </span
+        ><span class="text-span-7">Es fácil encontrar </span>
         <span class="text-span-8"
-          >alimentos con alto contenido nutricional.<br
+          > alimentos con alto contenido nutricional<br
         /></span>
       </h1>
     </div>
-    <div id="ubication" class="mapsection wf-section">
+    <!-- <div id="ubication" class="mapsection wf-section">
       <div
         data-widget-latlng="-12.0463731,-77.042754"
         data-widget-tooltip=""
@@ -178,7 +178,7 @@
         data-enable-touch="true"
         class="map w-widget w-widget-map"
       ></div>
-    </div>
+    </div> -->
     <div class="section-7 wf-section">
       <div class="div-block-16">
         <div
@@ -195,11 +195,11 @@
           class="lottie-animation-8"
         ></div>
       </div>
-      <h1 class="heading-19">
+      <!-- <h1 class="heading-19">
         <span class="text-span-19">Consigue alimentos de la</span> Costa, Sierra
         y Selva <span class="text-span-15">con</span>
         <span class="text-span-11">Kacera<br /><br /> </span>
-      </h1>
+      </h1> -->
     </div>
     <div id="benefits" class="section-8 wf-section">
       <div class="w-layout-grid grid">
